fix code alignment

--- a/_styl/components/type.styl
+++ b/_styl/components/type.styl
@@ -59,9 +59,10 @@ h2 code
   color: inherit
   align-self: center
 
-h2:has(code)
-  display: flex
-  gap: .2em
+h2 code
+  margin: -.15em .2em 0
+  display: inline-block
+  vertical-align: middle
 
 pre, code
   font-family: monospace
